fix: adjust text sizes and spacing in CtaSection, FeaturedProject, and Hobbies components for improved readability and layout consistency; add new breakpoints in CSS

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,8 @@
   --color-accent-amber: #ff8a00; /* Alerts, warnings, special attention */
 
   /* breakpoints */
-  --breakpoint-mobile:40rem;
+  --breakpoint-mdMobile:21rem;
+  --breakpoint-lgMobile:24rem;
   --breakpoint-tablet:48rem;
   --breakpoint-smLaptop:64rem;
   --breakpoint-laptop:80rem;
